[package]
name = "blog_os"
version = "0.1.0"
authors = ["vastz"]
edition = "2024"

# 使用 `cargo build` 编译时需要的配置
[profile.dev]
panic = "abort" # 禁用panic时栈展开

# 使用 `cargo build --release` 编译时需要的配置
[profile.release]
panic = "abort" # 禁用 panic 时栈展开

[[bin]]
name = "blog_os"
test = false
bench = false

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"